Fixed problem with tables not showing up

--- a/resources/assets/sass/backend/app.scss
+++ b/resources/assets/sass/backend/app.scss
@@ -1,3 +1,8 @@
 h1, h2, h3, h4 {
     font-weight: 300;
 }
+
+/* Fix for table not showing up in pages */
+.md-table, .md-table-content {
+    flex: none !important;
+}
